--- a/vuecasestudy/.src/assets/css/output.css
+++ b/vuecasestudy/.src/assets/css/output.css
@@ -714,6 +714,10 @@ video {
   gap: 2rem;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .space-x-5 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1.25rem * var(--tw-space-x-reverse));
@@ -789,6 +793,81 @@ video {
 .bg-yellow-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 240 138 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f7f9fd\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 249 253 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f1f4f8\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 244 248 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f9fbfd\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 251 253 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f4f9fe\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 249 254 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#e9eff5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(233 239 245 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#e7edf3\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(231 237 243 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f8dc76\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 220 118 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#fddb61\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 219 97 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#fed74b\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 215 75 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f1cc44\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 204 68 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#fbd54d\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 213 77 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#5ec0ea\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(94 192 234 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#21ace8\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 172 232 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#ffd43a\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 212 58 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#27b0eb\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 176 235 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-80 {
@@ -900,6 +979,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-red-400 {
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity));
+}
+
 .antialiased {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -908,6 +992,12 @@ video {
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
